--- a/templates/letstalk.html
+++ b/templates/letstalk.html
@@ -23,6 +23,8 @@
                 console.error("Error accessing webcam", error);
             });
     }
+
+    // function to video capture
     function stopVideoCapture() {
         const webcamContainer = document.getElementById('webcam-container');
         const video = webcamContainer.querySelector('video');
@@ -40,6 +42,28 @@
         }
     }
 
+    function captureFrame(){
+        const canvas = document.createElement('canvas');
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        const context = canvas.getContext('2d');
+        context.drawImage(video, 0, 0, canvas.width, canvas.height);
+        const frame = canvas.toDataURL('image/jpeg');
+
+        // send frame to the backend
+
+        fetch('/process_frame',{
+            method: "POST",
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.Stringify({image: frame})
+        })
+            .then(response => response.json())
+            .then(data => { console.log('Response from server: ', data)})
+            .catch(error =>{ console.error('Error: ',error)});
+    }
+
     // Call startVideoCapture when the page loads
     startVideoCapture();
 
@@ -47,5 +71,8 @@
     window.addEventListener('beforeunload', function(event) {
         stopVideoCapture();
     });
+
+    // Capture frames
+    intervalId = setInterval(captureFrame, 1000);
 </script>
 {% endblock %}
