Refactored file structure

--- a/templates/auths/signin.html
+++ b/templates/auths/signin.html
@@ -39,7 +39,7 @@
           />
       <label for="floatingInput">Mobile Number</label>
     </div>
-    <div class="form-floating">
+    <div class="form-floating mb-3">
       <input
           type="password"
           class="form-control"
@@ -48,6 +48,16 @@
           placeholder="Password"
           />
       <label for="floatingPassword">Password</label>
+    </div>
+    <div class="form-floating">
+      <input
+          type="password"
+          class="form-control"
+          name="re-password"
+          id="floatingPassword"
+          placeholder="Password"
+          />
+      <label for="floatingPassword">Re-Password</label>
     </div>
     <hr/>
     <input class="btn btn-primary" type="submit" value="Signin"/>
