Refactored file structre

--- a/templates/auths/signin.html
+++ b/templates/auths/signin.html
@@ -62,7 +62,7 @@
     <hr/>
     <input class="btn btn-primary" type="submit" value="Signin"/>
     <div class="text-end " style="margin-top: -20px; ">
-    <a href="" class="text-decoration-none" >Already have an account? Login Here</a>
+    <a href="/login" class="text-decoration-none" >Already have an account? Login Here</a>
     </div>
   </form>
 </div>
